tests/invalid_typecheck/test_tc_unknown_identifier.aphi
/*
Type-check error: Unknown identifier 'x'.
Assigns to a variable that was never declared.
*/

procedure main {
    x = 5;
}
